--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/home">Sipede</a>
+      <a class="navbar-brand" href="/home">Deteksi Diabetes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,7 +53,7 @@
         <div class="col-md-6">          
           <dic class="row">
             <div class="col-sm-4">
-              <img src="{{ url_for('static', filename='css/images/Arvi.jpg')}}" class="img-fluid img-thumbnail" style="border-radius: 50%">
+              <img src="{{ url_for('static', filename='css/images/waimg.jpeg')}}" class="img-fluid img-thumbnail" style="border-radius: 50%">
             </div>
             <div class="col-sm-8">
 
@@ -61,27 +61,27 @@
                 <tr>
                   <td>Nama</td>
                   <td>:</td>
-                  <td>Arvi Pramudyantoro</td>
+                  <td>Imam Rayhan Ekadinata</td>
                 </tr>
                 <tr>
-                  <td>NIM</td>
+                  <td>NPM</td>
                   <td>:</td>
-                  <td>18.11.1987</td>
+                  <td>1061810</td>
                 </tr>
                 <tr>
                   <td>Prodi</td>
                   <td>:</td>
-                  <td>S1 Informatika</td>
+                  <td>Teknologi Rekayasa Perangkat Lunak</td>
                 </tr>
                 <tr>
                   <td>Telp</td>
                   <td>:</td>
-                  <td>(+62) 821-8272-xxx4</td>
+                  <td>(+62) 895-6213-xxxx7</td>
                 </tr>
                 <tr>
                   <td>Email</td>
                   <td>:</td>
-                  <td>arvipramudyantoro@gmail.com</td>
+                  <td>imamrayhanekadinataa@gmail.com</td>
                 </tr>
               </table>
 
@@ -103,7 +103,7 @@
 
 <div class="container-fluid bg-dark text-white" style="padding: 20px 0; margin-top: 150px">
   <div class="container">
-    <small>&copy; 2021. Sipede (Sistem Prediksi Penyakit Diabetes). Arvi Pramudyantoro</small>
+    <small>&copy;2022. Deteksi Diabetes. Imam Rayhan Ekadinata </small>
   </div>
 </div>
 
