--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Sipede</a>
+      <a class="navbar-brand" href="#">Deteksi Diabetes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,7 +52,7 @@
       <div class="carousel-item active">
         <img src="{{ url_for('static', filename='css/images/Banner2.jpg')}}" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-    <h1 class="display-4">Selamat Datang<br> Ayo Cek Diabetesmu <br> <span class="font-weight-bold">Di SiPede</h1>
+    <h1 class="display-4">Selamat Datang<br> Ayo Cek Diabetesmu <br> <span class="font-weight-bold">Disini</h1>
     <hr class="my-4">
     <a class="btn btn-primary btn-lg" href="/index" role="button">MULAI</a>
   </div>
@@ -109,7 +109,7 @@
 
   <div class="container-fluid bg-dark text-white mt-5" style="padding: 20px 0;">
     <div class="container">
-      <small>&copy; 2021. Sipede (Sistem Prediksi Penyakit Diabetes). Arvi Pramudyantoro</small>
+      <small>&copy; 2022. Deteksi Diabetes. Imam Rayhan Ekadinata</small>
     </div>
   </div>
 
