--- a/templates/informasi1.html
+++ b/templates/informasi1.html
@@ -20,7 +20,7 @@
  
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="/home">Sipede</a>
+          <a class="navbar-brand" href="/home">Deteksi Diabetes</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -113,6 +113,6 @@
 
 <div class="container-fluid bg-dark text-white mt-5" style="padding: 20px 0;">
     <div class="container">
-      <small>&copy; 2021. Sipede (Sistem Prediksi Penyakit Diabetes). Arvi Pramudyantoro</small>
+      <small>&copy; 2022. Deteksi Diabetes. Imam Rayhan Ekadinata</small>
     </div>
   </div>
