--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/home">Sipede</a>
+      <a class="navbar-brand" href="/home">Deteksi Diabetes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,7 +44,7 @@
     <div class="wrap-contact100">
         <form class="contact100-form validate-form" action="/" method="POST">
             <span class="contact100-form-title">
-                SiPede
+                Deteksi Diabetes
             </span>
 
             <div class="form-group">
@@ -113,7 +113,7 @@
 
 <div class="container-fluid bg-dark text-white mt-5" style="padding: 20px 0;">
   <div class="container">
-    <small>&copy; 2021. Sipede (Sistem Prediksi Penyakit Diabetes). Arvi Pramudyantoro</small>
+    <small>&copy; 2022. Deteksi Diabetes. Imam Rayhan Ekadinata</small>
   </div>
 </div>
 {% endblock %}
