--- a/templates/informasi.html
+++ b/templates/informasi.html
@@ -53,20 +53,20 @@
        <br>
        <h3>Cegah Diabetes Sejak Dini, Hindari Makanan-Makanan Berikut Ini</h3>
        <img src="{{ url_for('static', filename='css/images/Berita1.jpg')}}" width = "600spx" class="img-fluid img-thumbnail" style="border-bottom-left-radius: 0%">
-        <p class="text-justify">  <b>SIPEDE</b>  - Penyakit diabetes bisa mengancam siapa saja. Bukan hanya orang yang memiliki riwayat penyakit turunan, namun pada orang-orang yang tidak mau menjaga kesehatannya dengan baik.</p>
+        <p class="text-justify">  <b>Deteksi Diabetes</b>  - Penyakit diabetes bisa mengancam siapa saja. Bukan hanya orang yang memiliki riwayat penyakit turunan, namun pada orang-orang yang tidak mau menjaga kesehatannya dengan baik.</p>
         <p class="text-justify">  Oleh karenanya, melakukan pencegahan sejak dini harus dilakukan untuk menghindari hal yang tidak diinginkan.</p>
         <a href="/informasi1">
           Baca Selengkapnya...</a>
           <br><br>
         <h3>Waspada! 25% Prediabetes Berisiko Alami Diabetes Melitus 3-5 Tahun Mendatang</h3>
         <img src="{{ url_for('static', filename='css/images/Berita2.png')}}" width = "600spx" class="img-fluid img-thumbnail" style="border-bottom-left-radius: 0%">
-        <p class="text-justify"><b>SIPEDE - </b>Diabetes menjadi salah satu penyakit yang banyak dialami masyarakat Indonesia. Terutama selama masa Pembatasan Kegiatan Masyarakat (PPKM) yang membuat semua aktivitas dilakukan dari rumah.</p>
+        <p class="text-justify"><b>Deteksi Diabetes - </b>Diabetes menjadi salah satu penyakit yang banyak dialami masyarakat Indonesia. Terutama selama masa Pembatasan Kegiatan Masyarakat (PPKM) yang membuat semua aktivitas dilakukan dari rumah.</p>
         <a href="/informasi1">
           Baca Selengkapnya...</a>
           <br><br>
         <h3>7 Khasiat Daun Binahong yang Luar Biasa, Cegah Diabetes hingga Menghilangkan Jerawat</h3>
         <img src="{{ url_for('static', filename='css/images/Berita3.jpg')}}" width = "600spx" class="img-fluid img-thumbnail" style="border-bottom-left-radius: 0%">
-        <p class="text-justify"><b>SIPEDE - </b> Daun binahong barang kali masih terdengar asing bagi sebagian masyarakat Indonesia. Namun tanpa disadari, tanaman ini bisa saja merambat di sekitar rumah. Khasiat daun binahong pun cukup banyak.</p>
+        <p class="text-justify"><b>Deteksi Diabetes - </b> Daun binahong barang kali masih terdengar asing bagi sebagian masyarakat Indonesia. Namun tanpa disadari, tanaman ini bisa saja merambat di sekitar rumah. Khasiat daun binahong pun cukup banyak.</p>
         <a href="/informasi1">
           Baca Selengkapnya...</a>
           <br><br>
