--- a/static/css/css/main.css
+++ b/static/css/css/main.css
@@ -157,11 +157,11 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: #a64bf4;
-  background: -webkit-linear-gradient(45deg, #00dbde, #fc00ff);
-  background: -o-linear-gradient(45deg, #00dbde, #fc00ff);
-  background: -moz-linear-gradient(45deg, #00dbde, #fc00ff);
-  background: linear-gradient(45deg, #00dbde, #fc00ff);
+  background: #00FF00;
+  background: -webkit-linear-gradient(45deg, #00dbde, #00FF00);
+  background: -o-linear-gradient(45deg, #00dbde, #00FF00);
+  background: -moz-linear-gradient(45deg, #00dbde, #00FF00);
+  background: linear-gradient(45deg, #00dbde, #00FF00);
   
 }
 
@@ -302,10 +302,10 @@ textarea.input100 {
   width: 300%;
   height: 100%;
   background: #a64bf4;
-  background: -webkit-linear-gradient(left, #00dbde, #fc00ff, #00dbde, #fc00ff);
-  background: -o-linear-gradient(left, #00dbde, #fc00ff, #00dbde, #fc00ff);
-  background: -moz-linear-gradient(left, #00dbde, #fc00ff, #00dbde, #fc00ff);
-  background: linear-gradient(left, #00dbde, #fc00ff, #00dbde, #fc00ff);
+  background: -webkit-linear-gradient(left, #00dbde, #00FF00, #00dbde, #00FF00);
+  background: -o-linear-gradient(left, #00dbde, #00FF00, #00dbde, #00FF00);
+  background: -moz-linear-gradient(left, #00dbde, #00FF00, #00dbde, #00FF00);
+  background: linear-gradient(left, #00dbde, #00FF00, #00dbde, #00FF00);
   top: 0;
   left: -100%;
 
