--- a/templates/hasil.html
+++ b/templates/hasil.html
@@ -15,6 +15,7 @@
             <div class="alert alert-danger">
                 <h1>{{ prediction_text }}</h1>
                 <p>Segera periksa dan konsultasikan ke dokter!</p>
+                <p>Akurasi Keakuratan Prediksi 84%!</p>
             </div>
 
             {% else %}
@@ -24,6 +25,7 @@
             <div class="alert alert-success">
                 <h1>{{ prediction_text }}</h1>
 			<p>Tetaplah waspada dan jaga kesehatan Anda!</p>
+            <p>Akurasi Keakuratan Prediksi 84%!</p>
             </div>
 
             {% endif %}
